k8s-manifests/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-deployment
  labels:
    app: backend-app
spec:
  replicas: 1 # Default value
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend-app-container
        image: 310688446727.dkr.ecr.ap-northeast-2.amazonaws.com/backend-app:latest
        ports:
        - containerPort: 8001
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        
        # Secret을 통째로 환경변수로 로드 (envFrom)
