k8s-manifests/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
  labels:
    app: backend-app
spec:
  selector:
    app: backend-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
